if (ODE_ENABLED)
  add_library(dsolvers nra_solver.cpp icp_solver.cpp ode_solver.cpp heuristics/ode_sim_heuristic.cpp  heuristics/ode_mode_sim.cpp   heuristics/rp_splitter_hybrid.cpp heuristics/rp_splitter_time.cpp )
else()
  add_library(dsolvers nra_solver.cpp icp_solver.cpp)
endif()
target_link_libraries(dsolvers ${DREAL_LIBS} ${EXTRA_LIBS})
